--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
+    "jsdom": "^25.0.1",
     "vite": "^5.4.10",
     "vitest": "^2.1.6"
   }
